--- a/contact.html
+++ b/contact.html
@@ -66,7 +66,7 @@
 				</ul>
 				</li>
 				<li>
-				<a href="news">NEWS</a>
+				<a href="events">EVENTS</a>
 				</li>
 				<li>
 				<a>CONTACT</a>
@@ -133,7 +133,7 @@
 					</ul>
 				</div>
 				<div class="copyright">
-					&copy; Untitled. All rights reserved.
+					&copy; 2021 THE YAFA CHARITY ORGANISATION. All rights reserved.
 				</div>
 			</footer>
 
