--- a/events.html
+++ b/events.html
@@ -2,7 +2,7 @@
 
 <html lang="en">	
 	<head>
-		<title>Forms - YAFA</title>
+		<title>Events - YAFA</title>
 		<meta charset="utf-8" />
 		<meta name="robots" content="noindex, nofollow, nosnippet">
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -10,8 +10,6 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
 	<body class="subpage">
-
-		<div id="google_translate_element"></div>
 
 		<!-- Header	-->
 		<section class="navigation">
@@ -69,7 +67,7 @@
 				</ul>
 				</li>
 				<li>
-				<a href="events">EVENTS</a>
+				<a>EVENTS</a>
 				</li>
 				<li>
 				<a href="contact">CONTACT</a>
@@ -88,8 +86,8 @@
 			<section id="One" class="wrapper style3">
 				<div class="inner">
 					<header class="align-center">
-						<p>Registration Forms</p>
-						<h2>Book</h2>
+						<p>Events, Trips and Activities</p>
+						<h2>Days Out</h2>
 					</header>
 				</div>
 			</section>
@@ -100,37 +98,17 @@
 					<div class="grid-style">
 
 						<div>
-							<div class="box" id="arabic-school">
+							<div class="box">
 								<div class="image fit">
-									<img src="images/pic02.jpg" alt="" />
-								</div>
-								<div class="content">
-									<header class="align-center">
-										<p>Sheffield Arabic Complementary School</p>
-										<h2>The Future School</h2>
-									</header>
-									<p> The Future School offers cultural and supplementary language education classes in Arabic to children aged 5 to 15. It proudly preserves the roots and identity of Yemenis and the wider Arab community. It also provides a platform for the children to celebrate there cultural heritage.</p>
-									<footer class="align-center">
-										<a href="forms/registration" class="button alt">Register</a>
-									</footer>
+									<img src="images/events/blackpool-summer-2021-en.jpeg" alt="Blackpool Summer 2021 Trip Poster" />
 								</div>
 							</div>
 						</div>
 
 						<div>
-							<div class="box" id="venue-hire">
+							<div class="box">
 								<div class="image fit">
-									<img src="images/pic05.jpg" alt="" />
-								</div>
-								<div class="content">
-									<header class="align-center">
-										<p>Hire Our Building</p>
-										<h2>Venue Hire</h2>
-									</header>
-									<p> We have an air conditioned open plan space with a capacity for upto 80 people with internet connection, a sound system, a kitchen, disabled access and toilets, front and rear car parking. It is a perfect event space available to hire for clubs, groups, workshops, meetings, parties and other special events.</p>
-									<footer class="align-center">
-										<a href="forms/venue-hire" class="button alt">Book</a>
-									</footer>
+									<img src="images/events/blackpool-summer-2021-ar.jpeg" alt="Blackpool Summer 2021 Trip Poster Arabic" />
 								</div>
 							</div>
 						</div>
@@ -160,12 +138,4 @@
 			<script src="assets/js/skel.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
-			<script type="text/javascript">
-			function googleTranslateElementInit() {
-			  new google.translate.TranslateElement({pageLanguage: 'en', layout: google.translate.TranslateElement.InlineLayout.SIMPLE}, 'google_translate_element');
-			}
-			</script>
-			
-			<script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
-	</body>
 </html>
