--- a/future-school.html
+++ b/future-school.html
@@ -56,7 +56,7 @@
 				<a href="timetable">TIMETABLE</a>
 				</li>
 				<li>
-				<a>BOOK</a>
+				<a>FORMS</a>
 				<ul class="nav-dropdown">
 				  <li>
 				  <a>VENUE HIRE</a>
@@ -66,6 +66,9 @@
 				  </li>
 				</ul>
 				</li>
+				<li>
+				<a href="events">EVENTS</a>
+				</li>								
 				<li>
 				<a href="contact">CONTACT</a>
 				</li>
@@ -114,7 +117,7 @@
 					</ul>
 				</div>
 				<div class="copyright">
-					&copy; Untitled. All rights reserved.
+					&copy; 2021 THE YAFA CHARITY ORGANISATION. All rights reserved.
 				</div>
 			</footer>
 
