--- a/404.html
+++ b/404.html
@@ -67,6 +67,9 @@
 					</ul>
 					</li>
 					<li>
+					<a href="events">EVENTS</a> 				
+					</li>
+					<li>
 					<a href="contact">CONTACT</a>
 					</li>
 					<li>
@@ -113,7 +116,7 @@
 					</ul>
 				</div>
 				<div class="copyright">
-					&copy; Untitled. All rights reserved.
+					&copy; 2021 THE YAFA CHARITY ORGANISATION. All rights reserved.
 				</div>
 			</footer>
 
