--- a/forms/venue-hire.html
+++ b/forms/venue-hire.html
@@ -56,7 +56,7 @@
 				<a href="../timetable">TIMETABLE</a>
 				</li>
 				<li>
-				<a>BOOK</a>
+				<a>FORMS</a>
 				<ul class="nav-dropdown">
 				  <li>
 				  <a href="../forms#venue-hire">VENUE HIRE</a>
@@ -65,6 +65,9 @@
 				  <a href="../forms#arabic-school">THE FUTURE SCHOOL</a>
 				  </li>
 				</ul>
+				</li>
+				<li>
+					<a href="../events">EVENTS</a>
 				</li>
 				<li>
 				<a href="../contact">CONTACT</a>
@@ -121,7 +124,7 @@
 					</ul>
 				</div>
 				<div class="copyright">
-					&copy; Untitled. All rights reserved.
+					&copy; 2021 THE YAFA CHARITY ORGANISATION. All rights reserved.
 				</div>
 			</footer>
 
