--- a/index.html
+++ b/index.html
@@ -78,6 +78,9 @@
 				</ul>
 				</li>
 				<li>
+				<a href="events">EVENTS</a>
+				</li>				
+				<li>
 				<a href="contact">CONTACT</a>
 				</li>
 				<li>
@@ -207,7 +210,7 @@
 					</ul>
 				</div>
 				<div class="copyright">
-					&copy; Untitled. All rights reserved.
+					&copy; 2021 THE YAFA CHARITY ORGANISATION. All rights reserved.
 				</div>
 			</footer>
 
