--- a/events.html
+++ b/events.html
@@ -5,6 +5,8 @@
 		<title>Events - YAFA</title>
 		<meta charset="utf-8" />
 		<meta name="robots" content="noindex, nofollow, nosnippet">
+		<meta name="description" content="">
+
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
         <link rel="icon" href="images/favicon.ico" type="image/x-icon">
 		<link rel="stylesheet" href="assets/css/main.css" />
