--- a/events.html
+++ b/events.html
@@ -61,10 +61,10 @@
 				<a>FORMS</a>
 				<ul class="nav-dropdown">
 				  <li>
-				  <a>VENUE HIRE</a>
+				  <a href="forms#venue-hire">VENUE HIRE</a>
 				  </li>
 				  <li>
-				  <a>THE FUTURE SCHOOL</a>
+				  <a href="forms#arabic-school">THE FUTURE SCHOOL</a>
 				  </li>
 				</ul>
 				</li>
