--- a/events.html
+++ b/events.html
@@ -97,6 +97,11 @@
 		<!-- Two -->
 			<section id="two" class="wrapper style2">
 				<div class="inner">
+					<header class="align-center">
+						<p>This page will be updated when there are new events</p>
+						<h2>There are no events available</h2>
+					</header>
+					<!--
 					<div class="grid-style">
 
 						<div>
@@ -116,6 +121,8 @@
 						</div>
 
 					</div>
+					-->
+
 				</div>
 			</section>
 
