--- a/about.html
+++ b/about.html
@@ -107,6 +107,7 @@
 							<p>The Board Members are the people responsible for controlling the work, management and administration of the charity.</p>
 							<ul>
 								<li>Khalid Hadrami (Chair)</li>
+								<li>Tarek Hussein Al-Yafei</li>
 								<li>Anwar Mohamed Saleh</li>
 								<li>Abdulrahman Abdulrub</li>
 								<li>Saleh Al-Yafai</li>
