--- a/timetable.html
+++ b/timetable.html
@@ -99,7 +99,7 @@
 				<div class="box">
 					<div class="content">
 						<h3>YAFA Events</h3>
-						<p>This is the schedule for the sessions and events at the NU Base in Netherthorpe. Timetable shows the details of areas/rooms and dates/times they are in use.</p>
+						<p>This is the schedule for the sessions and events. Timetable shows the sessions details including name, dates, times and location.</p>
 					</div>
 					<div class="responsive-iframe-container big-container">
 						<iframe src="https://calendar.google.com/calendar/embed?height=600&amp;wkst=2&amp;bgcolor=%23ffffff&amp;ctz=Europe%2FLondon&amp;src=cTc0ZTkwOGQ2ZHVhNHFoNHJjMG5yOTg5ZmNAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&amp;src=ZW4udWsjaG9saWRheUBncm91cC52LmNhbGVuZGFyLmdvb2dsZS5jb20&amp;src=ZW4tZ2IuaXNsYW1pYyNob2xpZGF5QGdyb3VwLnYuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&amp;color=%23F09300&amp;color=%234285F4&amp;color=%23F09300" style="border:solid 1px #777" width="800" height="600" frameborder="0" scrolling="no"></iframe>
