--- a/forms/registration.html
+++ b/forms/registration.html
@@ -118,7 +118,7 @@
 		<!-- Footer -->
 			<footer id="footer">
 				<div class="container">
-					<ul class="icons">
+					<ul class="footer-buttons">
 						<li><a href="https://twitter.com/YAFAcharityOrg" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 						<li><a href="https://facebook.com/YAFAcharityOrg" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 						<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
