Add subheading and anchor jump link

--- a/what-we-do.html
+++ b/what-we-do.html
@@ -120,7 +120,8 @@
                             <p>The local community requested we set up an Arabic school. It's our second year, and we now have six teachers and 70 students. The school opens Friday evening between 5 PM - 8 PM and Saturday between 11 AM - 2 PM. If you wish your child to attend please register your interest <a href="forms#arabic-school">HERE</a></p>
                             <h3 id="sports">SPORTS</h3>
                             <p>Swimming every Saturday morning at Hillsborough Leisure Centre. Please contact us for details.</p>
-                            <p id="other">Football every Saturday at Goodwin Sports Centre. Please contact us for details.</p>
+                            <p>Football every Saturday at Goodwin Sports Centre. Please contact us for details.</p>
+                            <h3 id="other">GALLERY</h3>
 							<div id="main" role="main">
 								<div class="icons">
 								  <a id="fullscreen"><img src="static/img/fullscreen.png"
