--- a/aden-steelers.html
+++ b/aden-steelers.html
@@ -2,7 +2,7 @@
 
 <html lang="en">	
 	<head>
-		<title>Forms - YAFA</title>
+		<title>The Future School - YAFA</title>
 		<meta charset="utf-8" />
 		<meta name="robots" content="noindex, nofollow, nosnippet">
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -10,8 +10,6 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
 	<body class="subpage">
-
-		<div id="google_translate_element"></div>
 
 		<!-- Header	-->
 		<section class="navigation">
@@ -73,7 +71,7 @@
 				</li>
 				<li>
 				<a href="aden-steelers">ADEN STEELERS FC</a>
-				</li>
+				</li>								
 				<li>
 				<a href="contact">CONTACT</a>
 				</li>
@@ -91,8 +89,8 @@
 			<section id="One" class="wrapper style3">
 				<div class="inner">
 					<header class="align-center">
-						<p>Registration Forms</p>
-						<h2>Book</h2>
+						<p>Kit Sponsor</p>
+						<h2>Aden Steelers FC U13</h2>
 					</header>
 				</div>
 			</section>
@@ -100,44 +98,13 @@
 		<!-- Two -->
 			<section id="two" class="wrapper style2">
 				<div class="inner">
-					<div class="grid-style">
-
-						<div>
-							<div class="box" id="arabic-school">
-								<div class="image fit">
-									<img src="images/pic02.jpg" alt="" />
-								</div>
-								<div class="content">
-									<header class="align-center">
-										<p>Sheffield Arabic Complementary School</p>
-										<h2>The Future School</h2>
-									</header>
-									<p> The Future School offers cultural and supplementary language education classes in Arabic to children aged 5 to 15. It proudly preserves the roots and identity of Yemenis and the wider Arab community. It also provides a platform for the children to celebrate there cultural heritage.</p>
-									<footer class="align-center">
-										<a href="forms/registration" class="button alt">Register</a>
-									</footer>
-								</div>
-							</div>
+					<div class="box">
+						<div class="content">
+							<header class="align-center">
+								<p>Please Come Back Later</p>
+								<h2>Under Construction</h2>
+							</header>
 						</div>
-
-						<div>
-							<div class="box" id="venue-hire">
-								<div class="image fit">
-									<img src="images/pic05.jpg" alt="" />
-								</div>
-								<div class="content">
-									<header class="align-center">
-										<p>Hire Our Building</p>
-										<h2>Venue Hire</h2>
-									</header>
-									<p> We have an air conditioned open plan space with a capacity for upto 80 people with internet connection, a sound system, a kitchen, disabled access and toilets, front and rear car parking. It is a perfect event space available to hire for clubs, groups, workshops, meetings, parties and other special events.</p>
-									<footer class="align-center">
-										<a href="forms/venue-hire" class="button alt">Book</a>
-									</footer>
-								</div>
-							</div>
-						</div>
-
 					</div>
 				</div>
 			</section>
@@ -148,8 +115,8 @@
 					<ul class="footer-buttons">
 						<li><a href="https://twitter.com/YAFAcharityOrg" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 						<li><a href="https://facebook.com/YAFAcharityOrg" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-						<li><a href="https://instagram.com/YAFAcharityOrg" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="mailto: info@yafacharity.org.uk" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+						<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+						<li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 					</ul>
 				</div>
 				<div class="copyright">
@@ -163,12 +130,6 @@
 			<script src="assets/js/skel.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
-			<script type="text/javascript">
-			function googleTranslateElementInit() {
-			  new google.translate.TranslateElement({pageLanguage: 'en', layout: google.translate.TranslateElement.InlineLayout.SIMPLE}, 'google_translate_element');
-			}
-			</script>
-			
-			<script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+
 	</body>
 </html>
