--- a/future-school.html
+++ b/future-school.html
@@ -46,10 +46,10 @@
 				  </li>
 				  <li>
 				  <a href="what-we-do#sports">SPORTS</a>
-				  </li>
+				  </li><!--
 				  <li>
 				  <a href="what-we-do#other">FACILITIES AND THE FUTURE SCHOOL</a>
-				  </li>
+				  </li>-->
 				</ul>
 				</li>
 				<li>
@@ -68,6 +68,9 @@
 				</li>
 				<li>
 				<a href="events">EVENTS</a>
+				</li>
+				<li>
+				<a href="aden-steelers">ADEN STEELERS FC</a>
 				</li>								
 				<li>
 				<a href="contact">CONTACT</a>
