--- a/contact.html
+++ b/contact.html
@@ -45,10 +45,10 @@
 				  </li>
 				  <li>
 				  <a href="what-we-do#sports">SPORTS</a>
-				  </li>
+				  </li><!--
 				  <li>
 				  <a href="what-we-do#other">FACILITIES AND THE FUTURE SCHOOL</a>
-				  </li>
+				  </li>-->
 				</ul>
 				</li>
 				<li>
@@ -67,6 +67,9 @@
 				</li>
 				<li>
 				<a href="events">EVENTS</a>
+				</li>
+				<li>
+				<a href="aden-steelers">ADEN STEELERS FC</a>
 				</li>
 				<li>
 				<a>CONTACT</a>
