--- a/forms/registration.html
+++ b/forms/registration.html
@@ -47,9 +47,6 @@
 				  <li>
 				  <a href="../what-we-do#sports">SPORTS</a>
 				  </li>
-				  <li>
-				  <a href="../what-we-do#other">FACILITIES AND THE FUTURE SCHOOL</a>
-				  </li>
 				</ul>
 				</li>
 				<li>
@@ -68,6 +65,9 @@
 				</li>
 				<li>
 				<a href="../events">EVENTS</a>
+				</li>
+				<li>
+				<a href="../aden-steelers">ADEN STEELERS</a>
 				</li>
 				<li>
 				<a href="../contact">CONTACT</a>
