--- a/index.html
+++ b/index.html
@@ -80,6 +80,9 @@
 				</li>
 				<li>
 				<a href="events">EVENTS</a>
+				</li>
+				<li>
+				<a href="aden-steelers">ADEN STEELERS FC</a>
 				</li>				
 				<li>
 				<a href="contact">CONTACT</a>
