--- a/aden-steelers.html
+++ b/aden-steelers.html
@@ -2,7 +2,7 @@
 
 <html lang="en">	
 	<head>
-		<title>The Future School - YAFA</title>
+		<title>Aden Steelers - YAFA</title>
 		<meta charset="utf-8" />
 		<meta name="robots" content="noindex, nofollow, nosnippet">
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
