--- a/aden-steelers.html
+++ b/aden-steelers.html
@@ -90,7 +90,7 @@
 				<div class="inner">
 					<header class="align-center">
 						<p>Kit Sponsor</p>
-						<h2>Aden Steelers FC U13</h2>
+						<h2>Aden Steelers FC U14s</h2>
 					</header>
 				</div>
 			</section>
