--- a/what-we-do.html
+++ b/what-we-do.html
@@ -105,16 +105,15 @@
                             <h3 id="education">EDUCATION AND TRAINING</h3>
 							<p>English classes for women is one of our most successful projects. We have one qualified English teacher, teaching two classes a week, one beginner/basic level and the other intermediate level; however, class sizes are limited to approximately 14 students. All the women are from the BAME community of Netherthorpe and Upperthorpe.</p>
                             <p>The B.O.A.T offers short course English classes for all individuals'. Courses are designed for all ages and abilities. We offer alternative ways of learning. For more information click <a href="files/BOAT FLYER JUNE 2021.pdf" target="_blank">HERE.</a></p>
+							<p>YAFA also run in partnership with Sheffield City Council ESOL (English to Speakers of Other Languages) classes, please click <a href="timetable" target="_blank">HERE</a> to see when classes are available.</p>
 							<p>GCSE support was set up to help meet that objective. The sessions take place two days a week, Tuesday and Thursday evening and deliver maths and science GCSE support. Staff are all volunteers and are all qualified and experienced teachers.</p>
                             <h3 id="youth">YOUTH ACTIVITIES</h3>
-							<p>The youth club is held every Sunday. Currently, we have 25 attendees between the ages of 11-17.</p>
-                            <p>Girls club held every Monday has over 20 attendees. All run by volunteers. It's members fully support the club. However, the club has no funding at this current time. Seeking funds for this project will be one of our main priorities over the coming months.</p>
+							<p>The youth club is held every Friday evening. Currently, we have 15 attendees between the ages of 16-25.</p>
+                            <p>YAFA currently run two Girls club held every Monday (13-18) and Sunday (18+) evenings, both clubs have over 20 attendees and are run by volunteers.</p>
                             <h3 id="arts">ARTS, CULTURE AND HERITAGE</h3>
-                            <p>The local community requested we set up an Arabic school. It's our second year, and we now have six teachers and 70 students. The school opens Friday evening between 5 PM - 8 PM and Saturday between 11 AM - 2 PM. If you wish your child to attend please register your interest <a href="forms#arabic-school">HERE</a></p>
+                            <p>The local community requested we set up an Arabic school. It's our third year, and we now have seven teachers and 110 students. The school opens Thursday evening between 5.30 PM - 7.30 PM and Saturday between 11AM - 2PM. If you wish your child to attend please register your interest <a href="forms#arabic-school">HERE</a></p>
                             <h3 id="sports">SPORTS</h3>
-                            <p>Swimming every Saturday morning at Hillsborough Leisure Centre. Please contact us for details.</p>
-                            <p>Football every Saturday at Goodwin Sports Centre. Please contact us for details.</p>
-							<p>YAFA is sponsoring Aden Steelers FC. YAFA is proud to be Aden Steelers under-13s away shirt sponsor for the 2022 - 2023 season.</p>
+							<p>YAFA is proud to be the away shirt sponsor for the Aden Steelers FC U14 team for the 2022-23 & 2023-24 seasons.</p>
                         </div>
 					</div>
 				</div>
