--- a/events.html
+++ b/events.html
@@ -112,8 +112,8 @@
 				<div class="inner">
 					<h3>UPCOMING EVENTS</h3>
 					<header class="align-center">
-						<p>This page will be updated when there are new events</p>
-						<h2>There are no upcoming events available</h2>
+						<p>This page will be updated when there are new events. <br>Please check the <a href="timetable">timetable</a> to see what else is on.</p>
+						<h2>There are no upcoming events available.</h2>
 					</header>
 
 					<br>
