Aden Steelers update and forms todos

--- a/about.html
+++ b/about.html
@@ -70,6 +70,9 @@
 					<a href="events">EVENTS</a> 				
 					</li>
 					<li>
+					<a href="aden-steelers">ADEN STEELERS FC</a>
+					</li>
+					<li>
 					<a href="contact">CONTACT</a>
 					</li>
 					<li>
