--- a/forms.html
+++ b/forms.html
@@ -114,7 +114,7 @@
 									</header>
 									<p> The Future School offers cultural and supplementary language education classes in Arabic to children aged 5 to 15. It proudly preserves the roots and identity of Yemenis and the wider Arab community. It also provides a platform for the children to celebrate there cultural heritage.</p>
 									<footer class="align-center">
-										<a href="forms/registration" class="button alt">Register</a>
+										<a href="forms/registration" class="button alt">Register Interest</a>
 									</footer>
 								</div>
 							</div>
