--- a/aden-steelers.html
+++ b/aden-steelers.html
@@ -101,20 +101,42 @@
 					<div class="box">
 						<div class="content">
 							<header class="align-center">
-								<p>Aden Steelers FC U14s</p>
-								<h2>Team Photo</h2>
-								<img src="images/aden-steelers/Aden Steelers FC U14 22-23 Team Photo.jfif" alt="Aden Steelers FC U14 Team Photo 22/23 Season Away Kit" width="80%">
+								<p id="squad-photo">Aden Steelers FC U14s</p>
+								<h2>Team Photo 22/23</h2>
+								<img src="images/aden-steelers/Aden Steelers FC U14 22-23 Team Photo.jfif" alt="Aden Steelers FC U14 Team Photo 22/23 Season Away Kit" width="90%">
+								<p>YAFA is proud to be the away shirt sponsor for the Aden Steelers Juniors Football Club Under-14s team for the 2022-23 & 2023-24 seasons.</p>
 							</header>
-							<h2>Fixtures</h2>
+							<div class="row 200%">
+								<div class="6u 12u$(medium)">
+									<h2 id="table">Current Table</h2>
+									<div id="lrep149033244" style="width: 100%;">Data loading....</div>
+								</div>
+
+								<div class="6u 12u$(medium)">
+									<h2 id="scores">Last Matchday</h2>
+									<div id="lrep680622842" style="width: 100%;">Data loading....</div>
+								</div>
+							</div>
+
+							<h2 id="match-reports">Away Fixtures</h2>
+							
 							<h3>Maltby Main FC U14 v Aden Steelers FC U14</h3>
-							<p>	<img src="images/aden-steelers/Maltby Main FC U14 v Aden Steelers FC U14 22-23.jpeg" alt="Aden Steelers FC U14 away at Maltby Main FC U14" width="50%" style="float: left; margin: 0 2% 2% 0; display: block;">
-								 2/10/2022<br>
-								 Kick off time: 12:30pm<br>
-								 Score: 2-4 <br>
-								 Win/lose/Draw: Win<br>
-								 Comments: It was a competitive game, both teams played well. However, Aden Steelers gave 100% and managed to win 4-2. Well done.<br>
-								 Position: 2nd
-							</p>
+							<div class="row 200%">
+								<div class="6u 12u$(medium)">
+									<img src="images/aden-steelers/Maltby Main FC U14 v Aden Steelers FC U14 22-23.jpeg" alt="Aden Steelers FC U14 away match at Maltby Main FC U14" width="100%" style="float: middle; margin: 0 2% 2% 0;">
+								</div>
+								<div class="6u 12u$(medium)">
+									<p>	
+										2/10/2022<br>
+										Kick off time: 12:30pm<br>
+										Score: 2-4 <br>
+										Win/lose/Draw: Win<br>
+										Comments: It was a competitive game, both teams played well. However, Aden Steelers gave 100% and managed to win 4-2. Well done.<br>
+										Position: 2nd
+									</p>
+								</div>
+							</div>
+
 						</div>
 					</div>
 				</div>
@@ -141,6 +163,13 @@
 			<script src="assets/js/skel.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
-
+			<script language="javascript" type="text/javascript">
+				var lrcode = '149033244'
+			</script>
+			<script language="Javascript" type="text/javascript" src="https://fulltime.thefa.com/client/api/cs1.js"></script>
+			<script language="javascript" type="text/javascript">
+				var lrcode = '680622842'
+			</script>
+			<script language="Javascript" type="text/javascript" src="https://fulltime.thefa.com/client/api/cs1.js"></script>
 	</body>
 </html>
