--- a/contact.html
+++ b/contact.html
@@ -118,6 +118,17 @@
 								</div>
 							</div>
 							<br>
+							<!-- TODO: form -->
+							<!-- <h2>Enquiry/Contact Form</h2>
+							<form>
+							<input class="input" type="text" name="name" placeholder="Name" required>
+							<input class="input" type="email" name="email" placeholder="Email">
+							<input class="input" type="tel" name="phone" placeholder="Mobile" pattern="^(\+44\s?7\d{3}|\(?07\d{3}\)?)\s?\d{3}\s?\d{3}$" required>
+							<textarea class="textarea" name="message" placeholder="Message" required></textarea>
+							<input type="submit" class="button alt" value="Send Message">
+							<input type="reset" value="Reset">
+							</form> -->
+
 							<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfknHSVgouguXPXDE2VzpLdotZ8lh1MEatckHSUwDQZXyOTrw/viewform?embedded=true" width="100%" height="900" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
 
 						</div>
