--- a/forms/registration.html
+++ b/forms/registration.html
@@ -99,6 +99,7 @@
 				<div class="inner">
 					<div class="box">
 						<div class="content">
+							<!-- TODO: tfs.sheffield@gmail.com -->
 							<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSd178MeWjMHxzvfQxvj-NdL8-E_ZQHbnK9i8j4zJHB4kkpVjQ/viewform?embedded=true" width="100%" height="1200" frameborder="0" marginheight="0" marginwidth="0" onload="loaded()">Loading…</iframe>
 							<script type="application/javascript">
 								var loadCounter = 0;
