--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 									</header>
 									<p> The Future School offers cultural and supplementary language education classes in Arabic to children aged 5 to 15. It proudly preserves the roots and identity of Yemenis and the wider Arab community. It also provides a platform for the children to celebrate there cultural heritage.</p>
 									<footer class="align-center">
-										<a href="forms/registration" class="button alt">Register</a>
+										<a href="forms/registration" class="button alt">Enquire</a>
 									</footer>
 								</div>
 							</div>
@@ -180,22 +180,22 @@
 					<div class="gallery">
 						<div>
 							<div class="image fit">
-								<a href="#"><img src="images/pic01.jpg" alt="" /></a>
+								<a href=""><img src="images/pic01.jpg" alt="" /></a>
 							</div>
 						</div>
 						<div>
 							<div class="image fit">
-								<a href="#"><img src="images/pic02.jpg" alt="" /></a>
+								<a href=""><img src="images/pic02.jpg" alt="" /></a>
 							</div>
 						</div>
 						<div>
 							<div class="image fit">
-								<a href="#"><img src="images/pic03.jpg" alt="" /></a>
+								<a href=""><img src="images/pic03.jpg" alt="" /></a>
 							</div>
 						</div>
 						<div>
 							<div class="image fit">
-								<a href="#"><img src="images/pic04.jpg" alt="" /></a>
+								<a href=""><img src="images/pic04.jpg" alt="" /></a>
 							</div>
 						</div>
 					</div>
