--- a/events.html
+++ b/events.html
@@ -110,11 +110,35 @@
 		<!-- Two -->
 			<section id="two" class="wrapper style2">
 				<div class="inner">
+					<div class="box">
+						<div class="content">
 					<h3>UPCOMING EVENTS</h3>
-					<header class="align-center">
+
+					<!-- <header class="align-center">
 						<p>This page will be updated when there are new events. <br>Please check the <a href="timetable">timetable</a> to see what else is on.</p>
 						<h2>There are no upcoming events available.</h2>
-					</header>
+					</header> -->
+
+					<p>Annual General Meeting Friday 11th November 2022 call <a href="tel: +447733435297">07733435297</a> or email <a href="mailto: yafacharityorganisation@hotmail.com">yafacharityorganisation@hotmail.com</a></p>
+					<div class="grid-style">
+
+					<div>
+						<div class="box">
+							<div class="image fit">
+								<img src="images/events/agm-november-2022-en.jfif" alt="AGM November 2022" />
+							</div>
+						</div>
+					</div>
+
+					<div>
+						<div class="box">
+							<div class="image fit">
+								<img src="images/events/agm-november-2022-ar.jfif" alt="AGM November 2022 Arabic" />
+							</div>
+						</div>
+					</div>
+
+					</div>
 
 					<br>
 					<h3>PREVIOUS EVENTS</h3>
@@ -220,7 +244,9 @@
 						</div>
 					</div>
 
-				</div>
+					</div>
+						</div>
+					</div>
 				</div>
 			</section>
 
