--- a/events.html
+++ b/events.html
@@ -101,8 +101,8 @@
 			<section id="One" class="wrapper style3">
 				<div class="inner">
 					<header class="align-center">
-						<p>Events, Trips and Activities</p>
-						<h2>Days Out</h2>
+						<p>Activities, Trips and Days Out</p>
+						<h2>Events</h2>
 					</header>
 				</div>
 			</section>
