--- a/aden-steelers.html
+++ b/aden-steelers.html
@@ -102,7 +102,8 @@
 						<div class="content">
 							<header class="align-center">
 								<p id="squad-photo">Aden Steelers FC U14s</p>
-								<h2>Team Photo 22/23</h2>
+								<h2>Team Photo 22/23</h2>								
+								<img src="images/aden-steelers/Aden Steelers FC U14 22-23 Team Photo 2.jfif" alt="Aden Steelers FC U14 Team Photo 22/23 Season Away Kit" width="90%">
 								<img src="images/aden-steelers/Aden Steelers FC U14 22-23 Team Photo.jfif" alt="Aden Steelers FC U14 Team Photo 22/23 Season Away Kit" width="90%">
 								<p>YAFA is proud to be the away shirt sponsor for the Aden Steelers Juniors Football Club Under-14s team for the 2022-23 & 2023-24 seasons.</p>
 							</header>
@@ -120,7 +121,21 @@
 
 							<h2 id="match-reports">Away Fixtures</h2>
 							
-							<h3>Maltby Main FC U14 v Aden Steelers FC U14</h3>
+							<h3>Brunsmere Athletic U14 v Aden Steelers FC U14</h3>
+							<div class="row 200%">
+								<div class="6u 12u$(medium)">
+									<p>	
+										6/11/2022<br>
+										Kick off time: 11:00am<br>
+										Score: 5-1 <br>
+										Win/Loss/Draw: Loss<br>
+										Comments: Today the team played quite well but were very unlucky. Loads of chances occurred but were unfortunate that they were just off target.<br>
+										Position: 1st
+									</p>
+								</div>
+								<div class="6u 12u$(medium)">
+									<img src="images/aden-steelers/Brunsmere Athletic U14 v Aden Steelers FC U14 22-23.jpeg" alt="Aden Steelers FC U14 away match at Brunsmere Athletic U14" width="100%" style="float: middle; margin: 0 2% 2% 0;">
+								</div>
 							<div class="row 200%">
 								<div class="6u 12u$(medium)">
 									<img src="images/aden-steelers/Maltby Main FC U14 v Aden Steelers FC U14 22-23.jpeg" alt="Aden Steelers FC U14 away match at Maltby Main FC U14" width="100%" style="float: middle; margin: 0 2% 2% 0;">
@@ -130,7 +145,7 @@
 										2/10/2022<br>
 										Kick off time: 12:30pm<br>
 										Score: 2-4 <br>
-										Win/lose/Draw: Win<br>
+										Win/Loss/Draw: Win<br>
 										Comments: It was a competitive game, both teams played well. However, Aden Steelers gave 100% and managed to win 4-2. Well done.<br>
 										Position: 2nd
 									</p>
