--- a/events.html
+++ b/events.html
@@ -114,10 +114,12 @@
 						<div class="content">
 					<h3>UPCOMING EVENTS</h3>
 
-					<!-- <header class="align-center">
+					<header class="align-center">
 						<p>This page will be updated when there are new events. <br>Please check the <a href="timetable">timetable</a> to see what else is on.</p>
 						<h2>There are no upcoming events available.</h2>
-					</header> -->
+					</header>
+					<br>
+					<h3>PREVIOUS EVENTS</h3>
 
 					<p>Annual General Meeting Friday 11th November 2022 call <a href="tel: +447733435297">07733435297</a> or email <a href="mailto: yafacharityorganisation@hotmail.com">yafacharityorganisation@hotmail.com</a></p>
 					<div class="grid-style">
@@ -140,8 +142,6 @@
 
 					</div>
 
-					<br>
-					<h3>PREVIOUS EVENTS</h3>
 					<p>The Queen's Platinum Jubilee 2022 celebration</p>
 					<div id="main" role="main">
 						<div class="icons">
